kubedefs/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
  lables:
    app: vproapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      labels:
        app: vproapp
    spec:
    containers:
      - name: vproapp
        image: vprocontainers/vprofileweb
        imagePullPolicy: Always
        ports:
        - name: vproapp-port
          containerPort: 8080
    initcontainers:
      - name: init-mydb
        image: busybox
        command: ['sh', '-c', "until nslookup vprodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done"]
      - name: init-memcache
        image: busybox
        command: ['sh', '-c', "until nslookup vprocache01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for memcache; sleep 2; done"]
      - name: init-rabbitmq
        image: busybox
        command: ['sh', '-c', "until nslookup vpromq01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for rabbitmq; sleep 2; done"]
