kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vprodb
spec:
  replica: 1
  selector:
    matchlables: 
        app: vprodb
  template:
    metadata:
      lables: vprodb
    spec:  
      containers:
        - name: vrodb
          image: vprocontainers/vprofiledb
          volumeMount:
          - mountPath: /var/lib/mysql
          ports:
            - name: vprodb-port
              containerPort: 3306
      volumes:
        - name: vpro-db-data
          PersistentVolumeClaim:
          claimName: db-pv-claim
      initcontainers:
        - name: busybox
          image: busybox:latest
          args: [ "rm", "-rf", "/var/lib/mysql/lost+found" ]
          volumeMounts:
            - name: vpro-db-data
              mountPath: /var/lib/mysql
